--- a/ChangeLog
+++ b/ChangeLog
@@ -220,9 +220,11 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * w obs³udze sygna³ów systemowych konfiguracjê zapisujemy do innego pliku ni¿
   kadu.conf (kadu.conf.backup.data) + obs³uga sygna³u SIGPIPE generowanego przez
   niektóre WM przy zamykaniu iksów (joi)
-* Usunieta translacjia spacji w search.cpp (Ron_K)
-* usuniety blad powodujacy segfaula przy dodawania anomimowego urzytkownika w
+* usunieta translacja spacji w search.cpp (Ron_K)
+* usuniety blad powodujacy segfaulta przy dodawania anonimowego uzytkownika w
   przypadku konferencji (michal)
+* jednak wy³±czamy obs³ugê SIGPIPE, bo okazuje siê, ¿e nie pomaga,
+  a stwarza dodatkowe problemy (joi)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
