--- a/ChangeLog
+++ b/ChangeLog
@@ -225,6 +225,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   przypadku konferencji (michal)
 * jednak wy³±czamy obs³ugê SIGPIPE, bo okazuje siê, ¿e nie pomaga,
   a stwarza dodatkowe problemy (joi)
+* estetyczna poprawka okna transferu pliku (michal)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
