obsługa ścieżek do plików w jednej funkcji
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1981 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -233,6 +233,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniêty b³±d dotycz±cy maksymalizacji okna chatu przy pewnych specyficznych
   warunkach (http://www.kadu.net/forum/viewtopic.php?t=2486) (joi)
 * poprawa wygl±du okna "Zarz±dcy modu³ów" oraz zapamiêtywanie jego rozmiarów (joi)
+* obs³uga ¶cie¿ek do plików danych przeniesiona do jednej funkcji dataPath() (joi)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
