--- a/ChangeLog
+++ b/ChangeLog
@@ -238,6 +238,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * configure: poprawka wykrywania bibliotek i opcja --disable-sig-handling (adrian)
 * poprawna deaktywacja modu³ów przy zamykaniu kadu (adrian)
 * poprawki przy statycznych modu³ach (joi)
+* sprawdzanie uaktualnieñ dopiero przy pierwszym zalogowaniu (joi)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
