--- a/ChangeLog
+++ b/ChangeLog
@@ -239,6 +239,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawna deaktywacja modu³ów przy zamykaniu kadu (adrian)
 * poprawki przy statycznych modu³ach (joi)
 * sprawdzanie uaktualnieñ dopiero przy pierwszym zalogowaniu (joi)
+* drobna poprawka przy zamykaniu okna konfiguracji (michal) 
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
