klawisz konfiguracyjny zarządcy modułów
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1998 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -240,6 +240,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawki przy statycznych modu³ach (joi)
 * sprawdzanie uaktualnieñ dopiero przy pierwszym zalogowaniu (joi)
 * drobna poprawka przy zamykaniu okna konfiguracji (michal) 
+* dodany skrót klawiszowy dla zarz±dcy modu³ów (joi)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
