srodkowy knefel i sms-y
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1999 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -241,6 +241,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * sprawdzanie uaktualnieñ dopiero przy pierwszym zalogowaniu (joi)
 * drobna poprawka przy zamykaniu okna konfiguracji (michal) 
 * dodany skrót klawiszowy dla zarz±dcy modu³ów (joi)
+* klikniecie srodkowym przyciskem myszy na kontakt ktory ma podany numer
+  telefonu znowu powoduje utwarcie okna wywylania sms-a (michal)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
