--- a/ChangeLog
+++ b/ChangeLog
@@ -241,8 +241,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * sprawdzanie uaktualnieñ dopiero przy pierwszym zalogowaniu (joi)
 * drobna poprawka przy zamykaniu okna konfiguracji (michal) 
 * dodany skrót klawiszowy dla zarz±dcy modu³ów (joi)
-* klikniecie srodkowym przyciskem myszy na kontakt ktory ma podany numer
-  telefonu znowu powoduje utwarcie okna wywylania sms-a (michal)
+* klikniêcie ¶rodkowym przyciskem myszy na kontakt który ma podany numer
+  telefonu znowu powoduje otwarcie okna wysy³ania smsa (michal)
+* wziêta pod uwagê grubo¶æ czcionki przy obliczaniu szeroko¶ci listy kontaktów (joi)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
