--- a/ChangeLog
+++ b/ChangeLog
@@ -248,6 +248,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawka b³êdu uniemo¿liwiaj±cego zobaczenie informacji o statycznych modu³ach (joi)
 * modu³y autoresponder i echo nie otwieraj± ju¿ okna przy rozpczêciu
   i zakoñczeniu dzia³ania (joi)
+* zamykanie okien chatów i konfiguracji przed wyj¶ciem + wiêcej komunikatów
+  debuguj±cych (joi)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
