--- a/ChangeLog
+++ b/ChangeLog
@@ -257,6 +257,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   teraz je¿eli modu³ chce byæ jedynym w danej kategorii, to musi dostarczaæ cechê
   i konfliktowaæ z innymi modu³ami dostarczaj±cymi j± (joi)
 * modu³y arts_sound, nas_sound, dsp_sound, esd_sound wykluczaj± siê nazwzajem (joi)
+* zabezpieczenie przed zapêtleniem siê modu³ów echo i autoresponder (mkey/joi)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
