--- a/ChangeLog
+++ b/ChangeLog
@@ -260,6 +260,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * zabezpieczenie przed zapêtleniem siê modu³ów echo i autoresponder (mkey/joi)
 * usuniêty drobny wyciek pamiêci w module sound (joi)
 * usuniêty b³±d w layoucie g³ównego okna (ostrze¿enia od Qt w trakcie dzia³ania) (joi)
+* przeniesienie inicjalizacji modu³ów _przed_ pytanie o konfiguracjê nowego konta (joi)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
