zapamiętywanie rozmiarów okien chatów
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2031 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -12,7 +12,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   przy ponownej próbie edycji prefixu pamiêtana jest wersja wcze¶niej
   wybrana (Ron_K)
 * wygodna konfiguracja zachowania dymkow po kliknieciu na nie (michal)
-  
+* zapamiêtywanie rozmiarów okien chatów (joi)  
+
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
   moze powinnismy zmienic nazwe projektu na FastKadu? ;) (adrian)
