--- a/ChangeLog
+++ b/ChangeLog
@@ -12,7 +12,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   przy ponownej próbie edycji prefixu pamiêtana jest wersja wcze¶niej
   wybrana (Ron_K)
 * wygodna konfiguracja zachowania dymkow po kliknieciu na nie (michal)
-* zapamiêtywanie rozmiarów okien chatów (joi)  
+* zapamiêtywanie rozmiarów okien chatów (joi)
+* usuniêty problem ze skryptem Instaluj gdy LC_ALL i LANG nie s± ustawione
+  na pl_PL (joi)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
