moduly: kompilator c++ dla plikow cpp
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2036 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * zapamiêtywanie rozmiarów okien chatów (joi)
 * usuniêty problem ze skryptem Instaluj gdy LC_ALL i LANG nie s± ustawione
   na pl_PL (joi)
+* poprawka polecenia kompilowania w modu³ach - kompilator c++ dla *.cpp (adrian)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
