--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   na pl_PL (joi)
 * poprawka polecenia kompilowania w modu³ach - kompilator c++ dla *.cpp (adrian)
 * dodany zapomniany nag³ówek dla abort() (joi)
+* wydzielony z kadu modu³ "docking", domy¶lnie statyczny (adrian)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
