--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodany zapomniany nag³ówek dla abort() (joi)
 * wydzielony z kadu modu³ "docking", domy¶lnie statyczny (adrian)
 * wydzielony z modu³u "docking" modu³ "x11_docking" domy¶lnie statyczny (adrian)
+* configure: usuniêcie poszukiwania xlib.h, opcji --disable-modules,
+  dodana wersja kadu w podsumowaniu (adrian)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
