--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * wydzielony z modu³u "docking" modu³ "x11_docking" domy¶lnie statyczny (adrian)
 * configure: usuniêcie poszukiwania xlib.h, opcji --disable-modules,
   dodana wersja kadu w podsumowaniu (adrian)
+* usuniêcie ok. 150 ostrze¿eñ przy CXXFLAGS="-Wall -std=c++98 -ansi"
+  (nadal jest ich mnóstwo, ale o te kilkadziesi±t mniej) (joi)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
