--- a/ChangeLog
+++ b/ChangeLog
@@ -24,6 +24,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniêcie ok. 150 ostrze¿eñ przy CXXFLAGS="-Wall -std=c++98 -ansi"
   (nadal jest ich mnóstwo, ale o te 150 mniej) (joi)
 * poprawione pozycjonowanie hintów po wydzieleniu modu³u docking (adrian)
+* usuniety segfaul w przypadky wywrotki gdy plik blokujacy zostal juz
+  usuniety (michal)
+* podczas wywrotki kadu wypisuje backtrace (michal)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
