- jeśli łączymy się ze statusem "ukryty z opisem" wysyłamy po połączeniu się z serwerem GG drugi pakiet zmiany statusu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2076 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -47,6 +47,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * lekka przebudowa odbierania i filtrowania wiadomo¶ci, teraz dopuszczamy
   równie¿ wiadomo¶ci z pust± tre¶ci± - np same obrazki (adrian)
 * usuniêcie ponad 160 ostrze¿eñ od kompilatora (zosta³o ju¿ tylko ko³o 20) (michal/joi)
+* je¶li ³±czymy siê ze statusem "ukryty z opisem" wysy³amy po po³±czeniu siê
+  z serwerem GG drugi pakiet zmiany statusu (chilek)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
