--- a/ChangeLog
+++ b/ChangeLog
@@ -49,6 +49,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniêcie ponad 160 ostrze¿eñ od kompilatora (zosta³o ju¿ tylko ko³o 20) (michal/joi)
 * je¶li ³±czymy siê ze statusem "ukryty z opisem" wysy³amy po po³±czeniu siê
   z serwerem GG drugi pakiet zmiany statusu (chilek)
+* pokazujemy na li¶cie kontaktów nasz status ukryty (chilek)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
