--- a/ChangeLog
+++ b/ChangeLog
@@ -55,6 +55,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   [IMAGE ¶cie¿ka/do/pliku] i obrazek jest wstawiany u odbiorcy,
   narazie trzeba te¿ napisaæ jeszcze jaki¶ tekst, ¿eby zadzia³a³o (adrian)
 * przycisk do wstawiania obrazków w oknie chat, dialog wyboru obrazka (adrian)
+* lekka przebudowa filtrowania wysy³anych wiadomo¶ci, teraz dopuszczamy
+  równie¿ wiadomo¶ci z pust± tre¶ci± - np same obrazki (adrian)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
