poprawa tworzenia nowej sekcji w konfiguracji
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2084 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -57,6 +57,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * przycisk do wstawiania obrazków w oknie chat, dialog wyboru obrazka (adrian)
 * lekka przebudowa filtrowania wysy³anych wiadomo¶ci, teraz dopuszczamy
   równie¿ wiadomo¶ci z pust± tre¶ci± - np same obrazki (adrian)
+* poprawa obs³ugi plików konfiguracyjnych przy tworzeniu nowej sekcji (joi)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
