--- a/ChangeLog
+++ b/ChangeLog
@@ -60,6 +60,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawa obs³ugi plików konfiguracyjnych przy tworzeniu nowej sekcji (joi)
 * konfiguracja odpowiedzi autorespondera (mkey/joi)
 * zachowywanie polskich znaków przez modu³y autoresponder i echo (joi)
+* wys³ane przez nas obrazki pokazuj± siê w oknie rozmowy (adrian)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
