--- a/ChangeLog
+++ b/ChangeLog
@@ -71,6 +71,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   nie majstrowa³ za bardzo przy DATADIR i BINDIR (UWAGA dla developerów: je¿eli
   w konstruktorze obiektu u¿ywacie funkcji dataPath(), to obiekty tej klasy nie
   mog± byæ statyczne, bo wewnêtrzne dane funkcji dataPath nie zostan± zainicjowane) (joi)
+* ostatnia grupa poprawek usuwaj±cych ostrze¿enia od kompilatora przy w³±czonej
+  opcji -Wall (joi)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
