mechanizm szukania do GaduProtocol
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2093 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -73,6 +73,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   mog± byæ statyczne, bo wewnêtrzne dane funkcji dataPath nie zostan± zainicjowane) (joi)
 * ostatnia grupa poprawek usuwaj±cych ostrze¿enia od kompilatora przy w³±czonej
   opcji -Wall (joi)
+* patch vogel-a wydzielaj±cy mechanizm szukania w katalogu jako gotowe do
+  u¿ycia przez modu³y metody klasy GaduProtocol (adrian)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
