--- a/ChangeLog
+++ b/ChangeLog
@@ -77,6 +77,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   u¿ycia przez modu³y metody klasy GaduProtocol (adrian)
 * kadu nie odbiera dwa razy tego samego obrazka w obrêbie jednej sesji (adrian)
 * pokazywanie odebranych obrazków w oknie rozmowy (adrian)
+* obrazek klepsydry zanim otrzymamy ten w³a¶ciwy, klepsydra by tomee (adrian)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
