--- a/ChangeLog
+++ b/ChangeLog
@@ -86,6 +86,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * configure: kompatybilno¶æ z gcc 2.95, ¶cie¿ka do qt dla Amd64,
   wylaczona obs³uga openssl - mo¿e wróci kiedy w koñcu serwery GG
   bêd± to obs³ugiwaæ, domy¶lnie w³±czone ostrze¿enia -Wall (adrian)
+* klasa HttpClient (ktora jest uzywana przez moduly sms) moze uzywac
+  servera proxy (michal)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
