drugi patch porzadkujacy vogela
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2122 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -97,6 +97,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   oraz usuniêty b³±d powoduj±cy znikanie paska narzêdziowego przy powy¿szych warunkach
   i za³adowanym module sound (joi)
 * wydzielenie dokowania dla WindowMakera do oddzielnego modu³u (joi)
+* drugi patch porz±dkuj±cy vogela: szukanie i (wy)rejestrowanie (adrian)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
